--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -193,9 +193,9 @@ ol {
   border-radius: 4px;
 }
 .ant-btn-defult {
-  color: #f03947;
-  background-color: #fff;
-  border-color: #f03947;
+  // color:rgba(252, 96, 54, 1);
+  // background-color: #fff;
+  // border-color:rgba(252, 96, 54, 1);
 }
 // 表单公用样式
 .ant-select-selection, .ant-input, .ant-input-number {
