--- a/src/assets/style/index.scss
+++ b/src/assets/style/index.scss
@@ -228,3 +228,23 @@ ol {
     }
   }
 }
+.btn {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.sbtn {
+  margin-left: 4px;
+  margin-right: 4px;
+}
+.orange {
+  background: rgba(252, 96, 54, 1);
+  border: 1px solid rgba(252, 96, 54, 1);
+}
+.red {
+  background: rgba(162, 20, 20, 1);
+  border: 1px solid rgba(162, 20, 20, 1);
+}
+.green {
+  background: green;
+  border: 1px solid green;
+}
